@@ -1,5 +1,14 @@
 2013-05-20 Miguel de Dios <miguel.dedios@artica.es>
 
+	* pandoradb.data.postgreSQL.sql, pandoradb.data.oracle.sql,
+	pandoradb_data.sql: set by default the tiles for the openstreetmap
+	layer in pretty "MapQuest Open" but there is old (ugly) tiles
+	openstreetmap.
+	
+	MERGED FROM THE TRUNK
+
+2013-05-20 Miguel de Dios <miguel.dedios@artica.es>
+
 	* include/functions_gis.php, operation/gis_maps/render_view.php,
 	operation/agentes/gis_view.php: changed the code to set the agent
 	icon with the original size.
